--- a/app/views/advert/ilanver.html.erb
+++ b/app/views/advert/ilanver.html.erb
@@ -130,11 +130,12 @@
 
 			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
 
-				<!-- Login Starts Here -->
+				<div id="loginkismi "  class="visible-xs ">
+					<!-- Login Starts Here -->
+					<%= render "loginContainer" %>
+					<!-- Login Ends Here -->
 
-				<%= render "loginContainer" %>
-
-				<!-- Login Ends Here -->
+				</div>
 
 			</div>
 
@@ -187,29 +188,29 @@
 
 				</div>
 
-				<div style="padding-left:50px; margin-top:85px;"class="hidden-xs hidden-sm sagsutun col-lg-6">
+				<div style="padding-left:50px; margin-top:85px;"class="visible-lg sagsutun col-lg-6">
 					-Kullanım Koşulları için <a href="#">buraya</a> tıklayınız.
 					<br>
 					<br>
-					<br>
+					
 					-İlanınız onaylandıktan sonra yayınlanacaktır.
 					<br>
 					<br>
-					<br>
+					
 					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="#">Buraya</a> tıklayın.
 					<br>
 					Ya da yardıma mı ihtiyacınız var? O zaman <a href="#">buraya</a> tıklayın.
 				</div>
 				
-				<div style="margin-top:85px;"class="visible-xs visible-sm sagsutun col-lg-6">
+				<div style="margin-top:50px;"class="visible-xs visible-sm visible-md sagsutun col-lg-6">
 					-Kullanım Koşulları için <a href="#">buraya</a> tıklayınız.
 					<br>
 					<br>
-					<br>
+					
 					-İlanınız onaylandıktan sonra yayınlanacaktır.
 					<br>
 					<br>
-					<br>
+					
 					-Sitemizin işleyişi ile ilgili bilgi mi almak istiyorsunuz? <a href="#">Buraya</a> tıklayın.
 					<br>
 					Ya da yardıma mı ihtiyacınız var? O zaman <a href="#">buraya</a> tıklayın.
