--- a/public/resources/css/searchbox.css
+++ b/public/resources/css/searchbox.css
@@ -28,7 +28,13 @@ input[type=search] {
 	-moz-transition: all .5s;
 	transition: all .5s;
 }
-input[type=search]:focus {
+
+
+@media screen and (min-width: 1200px) {
+    
+    
+    
+    input[type=search]:focus {
 	width: 130px;
 	background-color: #fff;
 	border-color: #66CC75;
@@ -37,6 +43,11 @@ input[type=search]:focus {
 	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
 	box-shadow: 0 0 5px rgba(109,207,246,.5);
 }
+    
+    
+}
+
+
 
 
 input:-moz-placeholder {
