--- a/app/views/advert/ikinciel.html.erb
+++ b/app/views/advert/ikinciel.html.erb
@@ -117,6 +117,12 @@
 		<!-- end of plugins  -->
 
 		<style>
+		
+		body {
+
+				background-color: #F0F7F7;
+			}
+		
 			@media screen and (min-width: 1200px) {
 				body {
 					padding-left: 50px;
@@ -147,11 +153,12 @@
 
 			<div class="visible-xs visible-sm row" style="margin-bottom: 10px;">
 
-				<!-- Login Starts Here -->
+				<div id="loginkismi "  class="visible-xs ">
+					<!-- Login Starts Here -->
+					<%= render "loginContainer" %>
+					<!-- Login Ends Here -->
 
-				<%= render "loginContainer" %>
-
-				<!-- Login Ends Here -->
+				</div>
 
 			</div>
 
@@ -170,11 +177,11 @@
 
 			</div>
 
-			<div class="row">
+			<div style="margin-bottom:30px;"  class="row">
 
 				<div class="single">
 
-					<div class="container-fluid">
+					<div style="padding-bottom:50px;" class="container-fluid">
 						<div class="col-md-9">
 							<div class="hidden-xs hidden-sm col-md-6 grid">
 
@@ -222,8 +229,10 @@
 							<div class="col-md-6 single-top-in">
 								<div class="single-para simpleCart_shelfItem">
 
-									<br class="visible-xs visible-sm ">
+									
 									<h1><%= @advert.name %></h1>
+									
+									<br class="visible-xs visible-sm ">
 
 									<div class="visible-xs visible-sm col-md-6">
 
@@ -443,8 +452,10 @@
 			<%= render "footer" %>
 
 		</div>
-
-		<!-- favorilere ekle/kaldır ajax -->
+		
+	</div>
+	</div>
+			<!-- favorilere ekle/kaldır ajax -->
 
 		<%= render "ilanfavorilereekle" %>
 
