--- a/app/views/application/_evarkadasiform.html.erb
+++ b/app/views/application/_evarkadasiform.html.erb
@@ -135,7 +135,7 @@
 
 <% if local[:mode] == 0 %>
 <div class = "row form-group">
-	<div class = "col-sm-offset-2 col-sm-10">
+	<div class = " col-sm-10">
 		<div class = "checkbox">
 			<label>
 				<input type = "checkbox" id="kullanim" value="true">
@@ -144,7 +144,7 @@
 	</div>
 </div>
 <div class = "row form-group">
-	<div class = "col-sm-offset-2 col-sm-10">
+	<div class = " col-sm-10">
 		<%= t.submit 'İlan Ver',class:"btn btn-default" %>
 	</div>
 </div>
