--- a/public/resources/plugins/tooltipplugin/tooltip.css
+++ b/public/resources/plugins/tooltipplugin/tooltip.css
@@ -1,3 +1,7 @@
+@media screen and (min-width: 992px) {
+    
+    
+    
 .tooltipeklentisi {
 				display: none;
 				position: absolute;
@@ -8,3 +12,7 @@
 				color: #fff;
 				font-size: 12px Arial;
 			}
+}
+
+
+
